# OpenEnv_calc

./: .dockerignore  Dockerfile  README.md  client.py  env  example_usage.py  grader.py  inference.py  main.py  models.py  models_sk.py  my_env.py  my_env1.py  openenv.yaml  pyproject.toml  q_l_agent.py  q_table.pkl  test_run.py  validate.sh
server/: app.py  environment.py  environment_sk.py
server/tasks/: __init__.py  task1_budget.py  task2_auction.py  task3_multi_campaign.py
trial/: t2_env.py  t2_model.py  t2_p2.py  t3_env.py  t3_env_per_allocation.py  t3_model.py  tt.py
